<resources>
    <string name="app_name">HealthyLifestyle</string>
    <!-- bottom navigation menu -->
    <string name="menu_settings_title">настройки</string>
    <string name="menu_home_title">главная</string>
    <string name="menu_book_title">книга</string>
    <string name="menu_mydish_title">моя тарелка</string>
    <string name="menu_catalogue_title">каталог</string>
    <string name="menu_profile_text">профиль</string>
<!--    <string name="register_text">Регистрация</string>-->
<!--    <string name="register_next">Далее</string>-->
    <string name="name">Имя</string>
    <string name="email">Почта</string>
    <string name="phone">Номер телефона</string>
    <string name="data">Дата рождения</string>
    <string name="password">Пароль</string>
    <string name="next">Далее</string>
<!--    <string name="nomer_phone">Введите номер телефона</string>-->
<!--    <string name="input_email">Введите свой email</string>-->
    <string name="input_code">Введите код</string>
    <string name="entrance">Вход</string>
<!--    <string name="create_entry">Создайте учётную запись или войдите в систему</string>-->
    <string name="done">Готово</string>
<!--    <string name="no_account">Нет аккаунта?</string>-->
    <string name="register">Зарегистрироваться</string>
    <string name="enter_code">Введите код</string>
    <string name="sent_phone">Высланный вам </string>
    <string name="code">code</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <string name="profile">Профиль</string>
    <string name="back">назад</string>
    <string name="search">Поиск</string>
    <string name="orders">Заказы</string>
    <string name="favourites">Избранное</string>
    <string name="basket">Корзина</string>
    <string name="sum_product">Сумма товаров</string>
    <string name="sum">3 000 р</string>
    <string name="title_dish">Куриная грудка с яйцами, рисом</string>
    <string name="sum_two">1 000 ₽</string>
    <string name="image_title">картинка блюда</string>
    <string name="close">закрыть</string>
    <string name="line">линия</string>
    <string name="comment">Комментарий</string>
    <string name="arrange">оформить</string>
    <string name="counter_number">- 1 +</string>
    <string name="counter_info">counter</string>
    <string name="zozhnik">Зожник</string>
    <string name="plate_method">plate method</string>
    <string name="autors">autors</string>
    <string name="electronic_book">электронная книга для смартфонов</string>
    <string name="buy_book">купить книгу</string>
    <string name="isItNecessary">НАДО ЛИ ВАМ ЭТО?</string>
    <string name="info_book_one">Зачем вообще питаться здорово и «правильно»? И надо ли вам это, дорогой читатель? И что вообще значит — «здорово и правильно»?</string>
    <string name="info_book_two">Мы часто слышим про такую пропорцию: «красота, здоровье, фигура — это на 80% питание, и на 20% - тренировки». Кто-то говорит о соотношении 70/30, но в любом случае цифра — умозрительная и примерная, штангенциркулем, калипером или любым другим прибором это не измерить.</string>
    <string name="info_book_three">Еще есть выражение: «Мы есть то, что мы едим» (и вдыхаем!) — можно спорить о том, кто это первым сказал, но не о том, что это справедливо. По мнению ученых, наше тело обновляется полностью новым набором клеток за 7–10 лет. Это средняя цифра, все сильно зависит от того, о каких тканях идет речь: кровь обновляется быстрее всего, счет идет на дни и недели, связки, кости - наоборот - медленнее всех.</string>
    <string name="info_book_four">При этом не хочется отдавать 80% своего времени и внимания на заботы о питании. И решать каждый день одни и те же задачи.</string>
    <string name="info_book_five">Картинка ниже отлично иллюстрирует долю питания в голове человека, который живет полноценной жизнью и не скатывается мыслями только к еде.</string>
    <string name="content">Содержание</string>
    <string name="image">image</string>
    <string name="info_book_six">А вот когда тема питания расширяет свою зону влияния в ваших мыслях — это уже нездорово. Даже если ваша тарелка выглядит безупречно, но дается с помощью жертвы остальных сфер жизни — можно ли назвать такую жизнь счастливой? А здоровой?</string>
    <string name="info_book_seven">Задача, которая стоит перед этой книгой — дать простое, понятное, основанное на современных научных знаниях решение и ответ на вопрос «Как питаться одновременно максимально здорово и просто».</string>
    <string name="info_book_eight">Книга «Метод Тарелки» для вас, если вы хотите:</string>
    <string name="list_book_one">перестать ежедневно беспокоиться о своем питании, проверяя его на полноценность и сбалансированность,</string>
    <string name="point">•</string>
    <string name="list_book_two">прожить дольше и активнее (а здоровое питание — важная часть этой задачи),</string>
    <string name="list_book_three">если вы хотите того же самого своим детям, родителям и партнеру, важно понятно им это объяснить и лучше — собственным примером.</string>
    <string name="info_book_nine">В книге вы найдете выводы из обзоров научных исследований о питании за почти 10 лет существования проекта Зожник, учебных материалов Ассоциации профессионалов фитнеса, десятков книг от передовых специалистов о питании.</string>
    <string name="info_book_ten">Все, что здесь написано, не придумано — это выжимки из статей, учебников, книг, исследований для облегчения понимания и экономии вашего времени.</string>
    <string name="info_book_eleven">А еще эта книга живая. Она растет как дерево. Мы добавляем, обновляем, улучшаем и выпускаем обновленную версию. И если у вас есть пожелания, как улучшить книгу, если вы обнаружили какую-то ошибку или вы специалист и предлагаете изучить новые научные данные - пишите нам на m@zozhnik.ru</string>
    <string name="read_more">читать далее</string>
    <string name="stories">сторис</string>
    <string name="stories_image">Здоровый образ жизни</string>
    <string name="collect_table">Собери свою тарелку</string>
    <string name="recommendations_week">Рекомендации недели</string>
    <string name="filter">фильтр</string>
    <string name="no_gluten">Без глютена</string>
    <string name="no_sugar">Без сахара</string>
    <string name="vegitarian">Вегетарианское</string>
    <string name="no_lactose">Без лактозы</string>
    <string name="more">ещё</string>
    <string name="popular">Популярные</string>
    <string name="description_popular">Томлёная говядина в томатном соусе</string>
    <string name="weightPopular">560 г</string>
    <string name="calories_popular">675 ккал</string>
    <string name="plus">+</string>
    <string name="mainDishes">Основные блюда</string>
    <string name="five_hundred">500 ₽</string>
    <string name="description_main">Печень с гречкой и помидорами</string>
    <string name="сollect_plate">Собери свою тарелку</string>
    <string name="to_try">попробовать</string>
    <string name="side_dishes">Гарниры</string>
    <string name="two_hundred">250 ₽</string>
    <string name="description_garnish">Свежий салат с огурцами</string>
    <string name="soups">Супы</string>
    <string name="price_soup">450 ₽</string>
    <string name="description_soup">Суп из щавеля и шпинат</string>
    <string name="buy">купить</string>
    <string name="desert">Десерты</string>
    <string name="price_desert">700 ₽</string>
    <string name="description_desert">Кекс из овсяных хлопьев и банана</string>
    <string name="gluten">без глютена</string>
    <string name="without_sugar">без сахара</string>
    <string name="lactose_free">без лактозы</string>
    <string name="without_meat">без мяса</string>
    <string name="earlier">Смотрели ранее</string>
    <string name="ready_meals">Готовые блюда</string>
    <string name="catalog">Каталог</string>
    <string name="compilation">Лучшая подборка блюд</string>
    <string name="selection_description">Уникальная подборка блюд на основные рейтинга выставленного нашими пользователями</string>
    <string name="go_over">перейти</string>
    <string name="ideology_description">ИДЕОЛОГИЯ ЗДОРОВОГО ПИТАНИЯ ПО НАУКЕ</string>
    <string name="to_read">читать</string>
    <string name="compilation_title">Подборка</string>
    <string name="the_diet">рациона на день</string>
    <string name="borch">Постный борщ</string>
    <string name="turkey">Индейка по-домашнему</string>
    <string name="stewed_beef">Томлёная говядина</string>
    <string name="detox_description">ЧТО НЕЛЬЗЯ ЕСТЬ ПО УТРАМ? ДЕТОКС</string>
    <string name="popular_dishes">Популярные блюда</string>
    <string name="title_popular">Томлёная \n говядина и салат</string>
    <string name="popular_description">в томатном соусе\nс молодым картофелем \nв укропе</string>
    <string name="desert_text">с добавлением моркови\nи мед,\nбез лактозы и муки</string>
    <string name="hundred">100 ₽</string>
    <string name="profile_title">Профиль</string>
    <string name="support">Поддержка</string>
    <string name="setting">Настройки</string>
    <string name="exit">выйти</string>
    <string name="miss"><u>пропустить</u></string>
    <string name="method">МЕТОД СБАЛАНСИРОВАННОЙ</string>
    <string name="plates">ТАРЕЛКИ</string>
    <string name="onboarding_description_one">Тарелки собираются с расчетом\nнеобходимых калорий, белков,\nжиров, углеводов, а так же\nмикроэлементов</string>
    <string name="resume">продолжить</string>
    <string name="method_two">СОБЕРИ СВОЮ ЗДОРОВУЮ</string>
    <string name="plates_two">ТАРЕЛКУ</string>
    <string name="onboarding_description_two">Собери тарелку из двух половинок с\nлюбимыми ингредиентами на свой вкус ,\nможно исключить свои аллергены с\nпомощью тегов</string>
    <string name="onboarding_description_three">Современные рекомендации по\nправильному сбалансированному\nпитанию на научной основе</string>
    <string name="method_three">ИДЕОЛОГИЯ ЗДОРОВОГО ПИТАНИЯ</string>
    <string name="method_title">ПИТАНИЯ</string>
    <string name="to_begin">начать!</string>
    <string name="title_onboarding_one">ЧТО НАМ СТОИТ</string>
    <string name="exclude">ИСКЛЮЧИТЬ</string>
    <string name="from_the_plates">ИЗ ТАРЕЛОК ?</string>
    <string name="stewed_beef_title">Томлёная говядина</string>
    <string name="reviews">Отзывы</string>
    <string name="estimation">4,9</string>
    <string name="description">Описание</string>
    <string name="description_plates">Тушеное мясо\nс овощами — одно из\nсамых популярных\nдомашних блюд. После\nдлительного\nприготовления, сперва\nс луком, а затем\nс картошкой и\nостальными овощами,\nговядина становится\nнежнейшей</string>
    <string name="structure">Состав</string>
    <string name="Kbzhu">кБЖУ</string>
    <string name="Leave_review">Оставить отзыв</string>
    <string name="name_surname">Вася Пупкин</string>
    <string name="delicious">Вкусно !</string>
    <string name="data_time">Сегодня, 12:30</string>
    <string name="popular_description_two">"в томатном соусе с молодым\nкартофелем в укропе "</string>
    <string name="general_assessment">Общая оценка</string>
    <string name="tell">Расскажите подробнее</string>
    <string name="add_fhoto">Добавьте фото</string>
    <string name="mores">Ещё</string>
    <string name="to_send">Отправить</string>
    <string name="_1_000">1 000 р</string>
    <string name="without">без лука\nбез чеснока</string>
    <string name="MET">МЕТ</string>
    <string name="OD">ОД</string>
    <string name="PLATES">ТАРЕЛКИ</string>

    <!-- fragment auth register -->
    <string name="btn_submit_reg">зарегистрироваться</string>
    <string name="btn_submit_get_code">получить код</string>
    <string name="btn_submit_to_main">перейти на главную</string>
    <string name="btn_submit_confirm">подтвердить</string>
    <string name="btn_submit_enter">вход</string>
    <string name="method_plates">Метод тарелки</string>
</resources>