<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/tollbarBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:contentDescription="@string/back"
                style="@style/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="@font/rubik"
                android:text="@string/reviews"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/toolbarClose"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:contentDescription="@string/close"
                style="@style/close" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:layout_width="297dp"
            android:layout_height="278dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/stories"
            android:src="@drawable/plate_popular" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/rubik"
            android:paddingHorizontal="16dp"
            android:text="@string/stewed_beef_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="307dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/rubik"
            android:paddingHorizontal="16dp"
            android:text="@string/popular_description_two"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/calories_popular"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weightPopular"
                android:textSize="20sp" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="16dp"
            android:paddingHorizontal="16dp"
            android:text="@string/general_assessment"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            android:paddingHorizontal="16dp"
            android:src="@drawable/rating_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="16dp"
            android:paddingHorizontal="16dp"
            android:text="@string/tell"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/comment"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="24dp"
            android:paddingHorizontal="16dp"
            android:text="@string/add_fhoto"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp">

            <LinearLayout
                android:layout_width="157dp"
                android:layout_height="157dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image"
                    android:src="@drawable/add" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/mores"
                    android:textColor="@color/gray_light"
                    android:textSize="24sp" />

            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp"
            android:background="@drawable/button_arrange"
            android:fontFamily="@font/rubik"
            android:text="@string/to_send"
            android:textAllCaps="false"
            android:textColor="@color/text_main"
            android:textSize="20sp" />


    </LinearLayout>
</ScrollView>