<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".view.book.BookFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <FrameLayout
            android:id="@+id/topTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/ImageLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:contentDescription="@string/image" />

            <ImageView
                style="@style/ImageProfile"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="end"
                android:contentDescription="@string/profile" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/plateMethod"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik"
                        android:text="@string/MET"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/table_mini" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik"
                        android:text="@string/OD"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="bottom"
                        android:contentDescription="@string/image"
                        android:src="@drawable/pepper_two" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/pepper" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik"
                        android:text="@string/PLATES"
                        android:textColor="@color/salmon"
                        android:textSize="26sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginHorizontal="2dp"
                    android:layout_marginStart="50dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/greenery" />


            </LinearLayout>

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/rubik"
                android:lines="2"
                android:text="@string/electronic_book"
                android:textSize="12sp" />

            <FrameLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/autors"
                    android:src="@drawable/figure" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:layout_gravity="start"
                    android:contentDescription="@string/autors"
                    android:src="@drawable/men" />

                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="92dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/image"
                    android:src="@drawable/the_curve" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/autors"
                    android:src="@drawable/women" />
            </FrameLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonBuy"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:background="@drawable/button_arrange"
                android:fontFamily="@font/rubik"
                android:text="@string/buy_book"
                android:textSize="20sp" />

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:useDefaultMargins="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/rubik"
                android:text="@string/isItNecessary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="@string/info_book_one"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:background="@drawable/button_content"
                android:fontFamily="@font/rubik"
                android:text="@string/content"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="@string/info_book_three"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/rubik"
                android:text="@string/info_book_four"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/rubik"
                android:text="@string/info_book_five"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:contentDescription="@string/image"
                android:src="@drawable/image_book" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="@string/info_book_six"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/rubik"
                android:text="@string/info_book_seven"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="@string/info_book_eight"
                android:textSize="14sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/rubik"
                android:orientation="vertical">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginEnd="5dp"
                        android:text="@string/point" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik"
                        android:text="@string/list_book_one"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow android:orientation="horizontal">

                    <TextView
                        android:layout_marginEnd="5dp"
                        android:text="@string/point" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik"
                        android:text="@string/list_book_two"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow android:orientation="horizontal">

                    <TextView
                        android:layout_marginEnd="5dp"
                        android:text="@string/point" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik"
                        android:text="@string/list_book_three"
                        android:textSize="14sp" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="@string/info_book_nine"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/rubik"
                android:text="@string/info_book_ten"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/rubik"
                android:text="@string/info_book_eleven"
                android:textSize="14sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNext"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_arrange"
                android:fontFamily="@font/rubik"
                android:text="@string/read_more"
                android:textSize="20sp" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>